# PavementJoggerQML

./: .gitignore  CMakeLists.txt  Main.qml  QTL.qrc  README.md  changelog.md  main.cpp  pjprojectxmlhandler.cpp  pjprojectxmlhandler.h
assets/: QTL.qrc
example_project/: example_project.xml
src/: Main.qml  PJKeybindHandler.qml  main.cpp
src/cpp/: pjprojectbackend.cpp  pjprojectbackend.h  pjprojectxmlhandler.cpp  pjprojectxmlhandler.h
src/cpp/commands/: addclipcommand.cpp  addclipcommand.h  command.h  commandmanager.cpp  commandmanager.h  pjcommandbackend.cpp  pjcommandbackend.h
src/cpp/timeline/: clip.h
src/global/: PJGlobalKeyboard.qml  PJGlobalPalette.qml  PJGlobalProject.qml  PJGlobalTimeline.qml
src/panels/: PJClip.qml  PJMenuBar.qml  PJTimeline.qml
src/panels/fieldview/: FVRobot.qml  PJFieldView.qml  PJFieldViewRobot.qml
src/panels/menubar/: PJMenuBar.qml  PJMenuBarSeparator.qml
src/panels/palette/: PJPalette.qml  PJPaletteFolder.qml  PJPaletteGhostItem.qml  PJPaletteMovement.qml
src/panels/palette/prefabs/: DraggableObj.qml
src/panels/timeline/: PJTimeline.qml  PJTimelineClip.qml  PJTimelineContent.qml  PJTimelineLabels.qml  PJTimelineRuler.qml  PJTimelineScrollArea.qml  PJTimelineScrubber.qml  PJTimelineScrubberLabel.qml  PJTimelineTrackLabels.qml  PJTimelineTracks.qml  PJTimelineZoomSlider.qml
src/panels/timeline/content/: PJTimelineShadowItem.qml  PJTimelineTracks.qml
src/panels/timeline/labels/: PJTimelineTrackLabels.qml
src/qml/: PJKeybindHandler.qml
src/qml/global/: PJGlobalPalette.qml  PJGlobalTimeline.qml
src/qml/panels/fieldview/: PJFieldView.qml  PJFieldViewRobot.qml
src/qml/panels/menubar/: PJMenuBar.qml  PJMenuBarSeparator.qml
src/qml/panels/palette/: PJPalette.qml  PJPaletteFolder.qml  PJPaletteFolderItems.qml  PJPaletteMovement.qml
src/qml/panels/properties/: PJProperties.qml
src/qml/panels/timeline/: PJTimelineClip.qml  PJTimelineScrollArea.qml  PJTimelineZoomSlider.qml
src/qml/panels/timeline/content/: PJTimelineContent.qml
src/qml/panels/timeline/labels/: PJTimelineTrackLabels.qml
